Fix issues on Firefox

--- a/pocket-4d.less
+++ b/pocket-4d.less
@@ -12,7 +12,7 @@
   transition: all 0.5s;
 
   &(.dragging) {
-    transition: all 0;
+    transition: all 0s;
 
     cursor: move;
 
